@@ -1,3 +1,15 @@
+2017-02-27  Per Arne Vollan  <pvollan@apple.com>
+
+        [Win] Http preload tests are failing.
+        https://bugs.webkit.org/show_bug.cgi?id=168910
+
+        Reviewed by Alex Christensen.
+
+        The feature is not enabled.
+
+        * WebView.cpp:
+        (WebView::notifyPreferencesChanged):
+
 2017-02-22  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         Better handle Thread and RunLoop initialization
